--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
               <ul class="orbit-container">
                 <li class="is-active orbit-slide">
                   <figure class="orbit-figure">
-                    <img class="orbit-image" src="../assets/img/resist.jpg" alt="Resist collection">
+                    <img class="orbit-image" src="assets/img/resist.jpg" alt="Resist collection">
                   </figure>
                 </li>
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
-                    <img class="orbit-image" src="../assets/img/summer.gif" alt="Summer collection">
+                    <img class="orbit-image" src="assets/img/summer.gif" alt="Summer collection">
                   </figure>
                 </li>
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
-                    <img class="orbit-image" src="../assets/img/yay.gif" alt="Yay, nuevos tatuajes">
+                    <img class="orbit-image" src="assets/img/yay.gif" alt="Yay, nuevos tatuajes">
                   </figure>
                 </li>
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
-                    <img class="orbit-image" src="../assets/img/floral.jpg" alt="Floral collection">
+                    <img class="orbit-image" src="assets/img/floral.jpg" alt="Floral collection">
                   </figure>
                 </li>
               </ul>
@@ -83,10 +83,10 @@
         <div class="cell">
           <div class="grid-x grid-margin-x">
             <div class="cell small-6">
-              <img src="../assets/img/custom_italy.jpg" alt="Italy collection">
+              <img src="assets/img/custom_italy.jpg" alt="Italy collection">
             </div>
             <div class="cell small-6">
-              <img src="../assets/img/pride.jpg" alt="Pride">
+              <img src="assets/img/pride.jpg" alt="Pride">
             </div>
           </div>
         </div>
@@ -126,152 +126,152 @@
           <div class="grid-x grid-margin-x grid-margin-y">
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
             <div class="cell small-6 medium-4 large-3 product">
               <span class="label new">Nuevo</span>
-              <img class="normal" src="../assets/img/products/resist.jpg" alt="Resist">
-              <img class="hover" src="../assets/img/products/resist_2.jpg" alt="Resist">
+              <img class="normal" src="assets/img/products/resist.jpg" alt="Resist">
+              <img class="hover" src="assets/img/products/resist_2.jpg" alt="Resist">
               <span class="label promo">2 por $5 <i class="fi-shopping-cart"></i></span>
             </div>
           </div>
